[gui] fix mediapanel volume control icons overflow on new line when muted

--- a/gui/css/mediapanel.less
+++ b/gui/css/mediapanel.less
@@ -1,6 +1,6 @@
 .mediaPanel {
 	.volume {
-		width:150px;
+		width:170px;
 		float:right;
 		padding:10px;
 	}
@@ -8,9 +8,7 @@
 	.player {
 		padding:10px;
 		float:left;
-		width: -webkit-calc(100% - 50px);
-		width:    -moz-calc(100% - 200px);
-		width:         calc(100% - 200px);
+		width: calc(100% - 220px);
 		overflow:hidden;
 		.controls {
 			float:left;
@@ -20,9 +18,7 @@
 			float:left;
 			margin-top:8px;
 			margin-left:10px;
-			width: -webkit-calc(100% - 50px);
-			width:    -moz-calc(100% - 270px);
-			width:         calc(100% - 270px);
+			width: calc(100% - 270px);
 		}
 		
 		.currentsong {
